# brencher

./: .flake8  .gitignore  AI.instructions.md  AI.md  Dockerfile  Dockerfile-tests  Dockerfile.test  Dockerfile_test_app  LINTING.md  README.instruction.md  README.md  REST.instruction.md  TODO.md  application.conf  docker-compose.yml  gradle.properties  mypy.ini  openapi.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  run_integration_tests.sh  settings.gradle.kts
.github/: copilot-instructions.md
.github/workflows/: generate-openapi-client.yml  merge_main.yaml  merge_main_and_squash.yaml  python-package.yml  (+3 more)
backend/: BACK.instructions.md  app.py  discover_envs.py  enironment.py  processing.py  secondary.py  slave.py  utils.py  web.py
composeApp/: build.gradle.kts
frontend/: UI.instructions.md  app.js  index.html  package-lock.json  package.json  styles.css  vite.config.ts
gradle/: libs.versions.toml
integrationTests/: conftest.py  containertest.py
server/: build.gradle.kts
shared/: build.gradle.kts
tests/: README.md  __init__.py  conftest.py  containertest.py  playwright_helper.py  test_app_asyncio.py  test_apply_changes.py  test_cached_env.py  test_caching_step.py  test_containertest.py  test_deploy_column_playwright.py  test_dry_run_playwright.py  test_dummy.py  test_git_integration.py  test_git_remove_branch.py  test_processing_initial_branches.py  test_remote_repo.py  test_shared_state.py
typesPlayground/: Decorator.py  Protocol.py  Protocol1.py  Pydantic.py  TypedDict.py  TypedDict1.py
(+61 files in other folders)
